[fixed] overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  background-color: #282c34;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
+  display: inline-flex;
+  overflow: auto;
+  flex: 0 0 100%;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -21,13 +17,4 @@
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
