--- a/src/PageContent.css
+++ b/src/PageContent.css
@@ -1,4 +1,7 @@
-.grid-container {
+.PageContent {
+  width: 100%;
   display: grid;
   grid-template-columns: auto auto auto;
+  grid-gap: 2em;
+  padding: 20px;
 }
