--- a/src/Project.css
+++ b/src/Project.css
@@ -1,3 +1,7 @@
-.project{
+.Project{
+  background-color:  rgb(182, 205, 255);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  border-radius: 5px;
   padding: 10px;
 }
